[tool.poetry]
name = "database-in-python"
version = "0.1.0"
description = ""
authors = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
readme = "README.md"
packages = [{include = "database_in_python"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
